# gemma2_poc

./: .env.template  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
static/: index.html
