[tool.poetry]
name = "gemma2_chatbot"
version = "0.1.0"
description = ""
authors = ["kotaro-kadoshima <kadoshima.kotaro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.44.0"
torch = "2.2.0"
flask = "2.3.2"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
